--- a/Pipfile
+++ b/Pipfile
@@ -4,19 +4,21 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-grpcio = "*"
-grpcio-tools = "*"
-fastapi = "*"
-uvicorn = "*"
-gunicorn = "*"
-requests = "*"
-websockets = "*"
-fastapi-utils = "*"
-psycopg2 = { extras = ["async"], version = "*" }
-asyncpg = "*"
-cachetools = "*"
-aiohttp = "*"
-aiocache = "*"
+grpcio = "1.63.0"
+grpcio-tools = "1.63.0"
+fastapi = "0.110.3"
+gunicorn = "22.0.0"
+uvicorn = "0.29.0"
+requests = "2.31.0"
+websockets = "12.0"
+asyncpg = "0.29.0"
+cachetools = "5.3.3"
+aiohttp = "3.9.5"
+aiocache = "0.12.2"
+psycopg2-binary = "2.9.9"
+waitress = "3.0.0"
+starlette = "0.37.2"
+fastapi-utils = "0.2.1"
 
 [requires]
 python_version = "3.10"
