reformated the code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ waitress = "^3.0.0"
 starlette = "^0.37.2"
 fastapi-utils = "^0.2.1"
 
+[tool.ruff]
+line-length=120
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
