--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-name: ruff
+name: pytest
 on: push
 jobs:
   build:
@@ -12,6 +12,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          python -m pip install poetry
           poetry install --no-root --with dev
       # Update output format to enable automatic inline annotations.
       - name: Run Pytest
