pytest and poetry

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -17,4 +17,4 @@ jobs:
       # Update output format to enable automatic inline annotations.
       - name: Run Pytest
         run: |
-          pytest .
+          poetry run pytest .
