--- a/.github/workflows/docker-branches.yml
+++ b/.github/workflows/docker-branches.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: lamer1
+        username: ${{ secrets.DOCKER_USER }}
         password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
     - name: Set up QEMU (for ARM64 emulation)
