--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Set up QEMU (for ARM64 emulation)
         if: matrix.arch == 'arm64'
         run: |
+          sudo apt-get update
           sudo apt-get install -y qemu-user-static
 
       - name: Set up Docker Buildx (for multi-platform builds)
