--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ cachetools = "^5.3.3"
 aiohttp = "^3.9.5"
 aiocache = "^0.12.2"
 psycopg2-binary = "^2.9.9"
+asyncmy = "^0.2.9"
 waitress = "^3.0.0"
 starlette = "^0.37.2"
 fastapi-utils = "^0.2.1"
