--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ psycopg2-binary = "^2.9.9"
 waitress = "^3.0.0"
 starlette = "^0.37.2"
 fastapi-utils = "^0.2.1"
+kaspa-script-address = "^0.0.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.9"
