--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,16 +16,18 @@ gunicorn = "^22.0.0"
 uvicorn = "^0.29.0"
 requests = "^2.31.0"
 websockets = "^12.0"
-asyncpg = "^0.29.0"
 cachetools = "^5.3.3"
 aiohttp = "^3.9.5"
 aiocache = "^0.12.2"
-psycopg2-binary = "^2.9.9"
+psycopg2-binary = "^2.9.10"
 waitress = "^3.0.0"
 starlette = "^0.37.2"
-fastapi-utils = "^0.2.1"
 kaspa-script-address = "^0.0.1"
 kaspa = "^1.0.0"
+greenlet = "^3.2.4"
+sqlalchemy = "^2.0"
+sqlalchemy-utils = "^0.42.0"
+psycopg = {version = "^3.2.10", extras = ["binary", "pool", "async"]}
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.9"
